@@ -1,4 +1,5 @@
 <?php
+  global $type;
 ?><script type="text/javascript">
 <!-- <![CDATA[
 function editCats (  evt ) {
@@ -12,7 +13,7 @@ function editCats (  evt ) {
   }
   var MyPosition = 'scrollbars=no,toolbar=no,left=' + mX + ',top=' + mY + ',screenx=' + mX + ',screeny=' + mY ;
   var cat_ids = document.selectcategory.elements['cat_id'].value;
-  url = "catsel.php?form=selectcategory&cats=" + cat_ids;
+  url = "catsel.php?form=selectcategory&type=<?php echo $type ?>&cats=" + cat_ids;
   var catWindow = window.open(url,"EditCat","width=365,height=200,"  + MyPosition);
 }
 //]]> -->
